[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Jonathan Monroy <jonathan.omj86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
asyncio = "^3.4.3"
asyncpg = "^0.26.0"
rich = "^12.6.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-dotenv = "^0.21.0"
requests = "^2.28.1"
asyncmock = "^0.4.2"
pylint = "^2.15.4"
pytest-asyncio = "^0.19.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
